# eaxefx

./: .editorconfig  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md
cmake/: make_version_string.cmake
doc/: beyond_good_and_evil_2003_reverb_params_fix.md  doom_3_2004_channel_contribution_fix.md  doom_3_2004_deleting_attached_AL_buffer.md  doom_3_2004_deleting_attached_al_buffer.md  doom_3_2004_init_reverb_props.md  doom_3_2004_undetached_AL_buffer.md  doom_3_2004_visual_twitch_fix.md  prey_2006_source_occlusion_fix.md  quake_4_2005_source_occlusion_fix.md
src/eaxefx/: CMakeLists.txt
src/eaxefx/include/: eaxefx_al_api.h  eaxefx_al_api_context.h  eaxefx_al_api_utils.h  eaxefx_al_loader.h  eaxefx_al_low_pass_param.h  eaxefx_al_object.h  eaxefx_al_scope_exit.h  eaxefx_al_symbols.h  eaxefx_al_uresources.h  eaxefx_eax_api.h  eaxefx_eax_converters.h  eaxefx_eax_validators.h  eaxefx_eaxx.h  eaxefx_eaxx_auto_wah_effect.h  eaxefx_eaxx_chorus_effect.h  eaxefx_eaxx_compressor_effect.h  eaxefx_eaxx_context.h  eaxefx_eaxx_context_shared.h  eaxefx_eaxx_distortion_effect.h  eaxefx_eaxx_eax_call.h  eaxefx_eaxx_eax_reverb_effect.h  eaxefx_eaxx_echo_effect.h  eaxefx_eaxx_effect.h  eaxefx_eaxx_equalizer_effect.h  eaxefx_eaxx_flanger_effect.h  eaxefx_eaxx_frequency_shifter_effect.h  eaxefx_eaxx_fx_slot.h  eaxefx_eaxx_fx_slot_index.h  eaxefx_eaxx_fx_slots.h  eaxefx_eaxx_null_effect.h  eaxefx_eaxx_pitch_shifter_effect.h  eaxefx_eaxx_ring_modulator_effect.h  eaxefx_eaxx_source.h  eaxefx_eaxx_validators.h  eaxefx_eaxx_vocal_morpher_effect.h  eaxefx_main.h  eaxefx_utils.h
src/eaxefx/src/: eaxefx.rc.in  eaxefx_al_api.cpp  eaxefx_al_api_context.cpp  eaxefx_al_api_utils.cpp  eaxefx_al_loader.cpp  eaxefx_al_object.cpp  eaxefx_al_scope_exit.cpp  eaxefx_al_symbols.cpp  eaxefx_al_uresources.cpp  eaxefx_eax_api.cpp  eaxefx_eax_converters.cpp  eaxefx_eax_validators.cpp  eaxefx_eaxx.cpp  eaxefx_eaxx_auto_wah_effect.cpp  (+23 more)
src/eaxefx_app_patcher/: CHANGELOG.md  CMakeLists.txt  README.md
src/eaxefx_app_patcher/src/: eaxefx_app_patcher.c  eaxefx_app_patcher.cpp  eaxefx_app_patcher.rc.in
src/eaxefx_doom3_fix/: CMakeLists.txt
src/eaxefx_doom3_fix/src/: eaxefx_doom3_fix.cpp  eaxefx_doom3_fix.rc.in
src/eaxefx_doom3_fix_lib/: CMakeLists.txt
src/eaxefx_doom3_fix_lib/doc/: doom3_visual_twitch_fix.txt
src/eaxefx_doom3_fix_lib/include/: eaxefx_doom3_fix_lib.h
src/eaxefx_doom3_fix_lib/src/: eaxefx_doom3_fix_lib.cpp
src/eaxefx_patch_lib/: CMakeLists.txt
src/eaxefx_patch_lib/include/: eaxefx_file_patcher.h  eaxefx_patch.h  eaxefx_patch_collection.h  eaxefx_patch_validator.h  eaxefx_win32_process_patcher.h
src/eaxefx_patch_lib/src/: eaxefx_file_patcher.cpp  eaxefx_patch.cpp  eaxefx_patch_collection.cpp  eaxefx_patch_validator.cpp  eaxefx_win32_process_patcher.cpp
src/eaxefx_sys_lib/: CMakeLists.txt
src/eaxefx_sys_lib/include/: eaxefx_c_string.h  eaxefx_condition_variable.h  eaxefx_console.h  eaxefx_core_types.h  eaxefx_encoding.h  eaxefx_env.h  eaxefx_exception.h  eaxefx_file.h  eaxefx_file_system.h  eaxefx_fs.h  eaxefx_fs_path.h  eaxefx_logger.h  eaxefx_moveable_mutex_lock.h  eaxefx_mutex.h  eaxefx_not_null.h  eaxefx_platform.h  eaxefx_process.h  eaxefx_rc.h  eaxefx_scope_exit.h  eaxefx_shared_library.h  eaxefx_span.h  eaxefx_string.h  eaxefx_system_time.h  eaxefx_thread.h  eaxefx_unit_converters.h
src/eaxefx_sys_lib/src/: eaxefx_c_string.cpp  eaxefx_condition_variable.cpp  eaxefx_console.cpp  eaxefx_core_types.cpp  eaxefx_encoding.cpp  eaxefx_exception.cpp  eaxefx_file.cpp  eaxefx_file_system.cpp  eaxefx_fs.cpp  eaxefx_fs_path.cpp  eaxefx_logger.cpp  eaxefx_moveable_mutex_lock.cpp  eaxefx_mutex.cpp  eaxefx_pch.h  eaxefx_platform.cpp  eaxefx_process.cpp  eaxefx_shared_library.cpp  eaxefx_span.cpp  eaxefx_string.cpp  eaxefx_sys_win32_condition_variable.cpp  eaxefx_sys_win32_condition_variable.h  eaxefx_sys_win32_critical_section.cpp  eaxefx_sys_win32_critical_section.h  eaxefx_sys_win32_event.cpp  eaxefx_sys_win32_event.h  eaxefx_system_time.cpp  eaxefx_thread.cpp  eaxefx_win32_condition_variable.cpp  eaxefx_win32_condition_variable.h  eaxefx_win32_console.cpp  eaxefx_win32_critical_section.cpp  eaxefx_win32_critical_section.h  eaxefx_win32_encoding.cpp  eaxefx_win32_env.cpp  eaxefx_win32_event.cpp  eaxefx_win32_event.h  eaxefx_win32_file.cpp  eaxefx_win32_mutex.cpp  eaxefx_win32_platform.cpp  eaxefx_win32_process.cpp  (+4 more)
src/eaxefx_wrapper/: CMakeLists.txt
src/eaxefx_wrapper/include/: eaxefx_al_api.h  eaxefx_al_api_context.h  eaxefx_al_api_utils.h  eaxefx_al_loader.h  eaxefx_al_object.h  eaxefx_al_symbols.h  eaxefx_common_strings.h  eaxefx_eax_api.h  eaxefx_eaxx.h  eaxefx_eaxx_auto_wah_effect.h  eaxefx_eaxx_chorus_effect.h  eaxefx_eaxx_compressor_effect.h  eaxefx_eaxx_context.h  eaxefx_eaxx_distortion_effect.h  eaxefx_eaxx_eax_call.h  eaxefx_eaxx_eax_reverb_effect.h  eaxefx_eaxx_echo_effect.h  eaxefx_eaxx_effect.h  eaxefx_eaxx_equalizer_effect.h  eaxefx_eaxx_flanger_effect.h  eaxefx_eaxx_frequency_shifter_effect.h  eaxefx_eaxx_fx_slot.h  eaxefx_eaxx_fx_slot_index.h  eaxefx_eaxx_fx_slots.h  eaxefx_eaxx_null_effect.h  eaxefx_eaxx_pitch_shifter_effect.h  eaxefx_eaxx_ring_modulator_effect.h  eaxefx_eaxx_source.h  eaxefx_eaxx_vocal_morpher_effect.h
src/eaxefx_wrapper/src/: eaxefx_al_api.cpp  eaxefx_al_api_context.cpp  eaxefx_al_api_utils.cpp  eaxefx_al_loader.cpp  eaxefx_al_object.cpp  eaxefx_al_uresources.cpp  eaxefx_common_strings.cpp  eaxefx_eax_api.cpp  eaxefx_eaxx.cpp  eaxefx_eaxx_auto_wah_effect.cpp  eaxefx_eaxx_chorus_effect.cpp  eaxefx_eaxx_compressor_effect.cpp  eaxefx_eaxx_context.cpp  eaxefx_eaxx_distortion_effect.cpp  eaxefx_eaxx_eax_call.cpp  eaxefx_eaxx_eax_reverb_effect.cpp  eaxefx_eaxx_echo_effect.cpp  eaxefx_eaxx_effect.cpp  eaxefx_eaxx_equalizer_effect.cpp  eaxefx_eaxx_flanger_effect.cpp  eaxefx_eaxx_frequency_shifter_effect.cpp  eaxefx_eaxx_fx_slot.cpp  eaxefx_eaxx_fx_slot_index.cpp  eaxefx_eaxx_null_effect.cpp  eaxefx_eaxx_pitch_shifter_effect.cpp  eaxefx_eaxx_ring_modulator_effect.cpp  eaxefx_eaxx_source.cpp  eaxefx_eaxx_vocal_morpher_effect.cpp  eaxefx_main.cpp
